force-app/main/default/objects/Channel_Benefit_Action_Packs__c/Channel_Benefit_Action_Packs__c.object-meta.xml
<CustomObject>
    <label>Channel Benefit Action Pack</label>
    <nameField>
        <label>Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Channel Benefit Action Packs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>