force-app/main/default/objects/Channel_Benefit_Action_Packs__c/fields/Action_Pack_Category__c.field-meta.xml
<CustomField>
    <fullName>Action_Pack_Category__c</fullName>
    <label>Action Pack Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales and Marketing</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Customer Experience</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>