force-app/main/default/objects/Channel_Benefit_Action_Packs__c/fields/Brief_Description__c.field-meta.xml
<CustomField>
    <fullName>Brief_Description__c</fullName>
    <label>Brief Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>