force-app/main/default/objects/Channel_Benefit_Action_Packs__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <label>URL (Link)</label>
    <type>Url</type>
</CustomField>